log
Fri 26 Apr 2024 01:45:49 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
0566108
Fri 26 Apr 2024 01:46:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f8d7bb6
Fri 26 Apr 2024 01:48:23 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4ea7eeb
Fri 26 Apr 2024 01:59:04 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3e0a187
Sat 27 Apr 2024 04:14:38 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
3f598a7
Sat 27 Apr 2024 04:16:47 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
ede01fc
Sat 27 Apr 2024 04:24:58 PM UTC: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:22: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   52 |         map->buckets[pos]->value = value;
      |                      ^~~
      |                      pow
hashmap.c:52:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e862406
Sat 27 Apr 2024 04:25:39 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
bc11973
Sat 27 Apr 2024 04:26:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1df0156
Sat 27 Apr 2024 04:34:47 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
bcd4b12
Sat 27 Apr 2024 04:37:00 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9d8ec29
Sat 27 Apr 2024 04:37:14 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
55f7200
Sat 27 Apr 2024 04:41:43 PM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
e52738a
Sat 27 Apr 2024 04:45:59 PM UTC: 
 hashmap.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
59463a8
Sat 27 Apr 2024 04:59:54 PM UTC: 
 hashmap.c | 27 ++++++++++++---------------
 1 file changed, 12 insertions(+), 15 deletions(-)
 tests:  0|0
b5c6c72
Sat 27 Apr 2024 05:00:26 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1686490
